Added some block out assets

--- a/UNREAL/WildWest/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UNREAL/WildWest/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -111,6 +111,7 @@ ShowUnusedLayers=True
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+StaticMesh=StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.File Path,
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -494,6 +495,23 @@ FbxImportUI.Transform=True
 FbxImportUI.Miscellaneous=True
 FbxImportUI.Material=True
 FbxImportUI.FbxFileInformation=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+StaticMesh.Thumbnail=True
+StaticMesh.LevelOfDetail=True
+FbxExportOption.Exporter=True
+FbxExportOption.Mesh=True
+FbxExportOption.StaticMesh=True
+FbxExportOption.SkeletalMesh=True
+FbxExportOption.Animation=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -501,10 +519,14 @@ GeneralProjectSettings=True
 GameMapsSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Western_Town/Assets/door_A.door_A;
+RecentlyPlaced=/Game/Western_Town/Assets/walkway_straight.walkway_straight;
+RecentlyPlaced=/Game/Western_Town/Assets/walkway_short.walkway_short;
+RecentlyPlaced=/Game/Western_Town/Assets/plane_wall_short.plane_wall_short;
 RecentlyPlaced=/Game/Western_Town/Assets/cube.cube;
 RecentlyPlaced=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -534,7 +556,7 @@ bBuildNanite=False
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
 bAutoGenerateCollision=True
-bCombineMeshes=False
+bCombineMeshes=True
 DistanceFieldResolutionScale=1.000000
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
@@ -545,7 +567,7 @@ bComputeWeightedNormals=True
 bReorderMaterialToFbxOrder=True
 ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
 ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
-ImportUniformScale=1.000000
+ImportUniformScale=0.500000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
@@ -619,4 +641,30 @@ bConvertSceneUnit=False
 
 [MessageLog]
 LastLogListing=FBXImport
+
+[DetailCategoriesAdvanced]
+FbxImportUI.Mesh=True
+
+[ContentBrowserRecent]
+MRUItem0=/Game/Western_Town/Assets/plane_wall_short
+
+[AssetEditorToolkitTabLocation]
+/Game/Western_Town/Assets/plane_wall_short.plane_wall_short=1
+
+[DetailPropertyExpansion]
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+Object=
+
+[FBX_Export_UI_Option_FbxExportOption]
+FbxExportCompatibility=FBX_2016
+bASCII=False
+bForceFrontXAxis=False
+VertexColor=True
+LevelOfDetail=False
+Collision=False
+bExportMorphTargets=False
+bExportPreviewMesh=False
+MapSkeletalMotionToRoot=False
+bExportLocalTime=True
 
